feat: add demographic filters to queries (#44)
* feat: add demographic filters to queries

* feat: update swagger.yaml to include demographic fields

* feat: modify demographic queries to default to "Other"
