# package/src/swagger_server/swagger/swagger.yaml
@@ -481,6 +481,14 @@ components:
                     type: integer
                   average:
                     type: integer
+                  race:
+                    type: array
+                    items:
+                      type: string
+                  gender:
+                    type: array
+                    items:
+                      type: string
       xml:
         name: QueryDegree
     QueryExpandDegree:
@@ -506,6 +514,14 @@ components:
             type: integer
           average:
             type: integer
+          race:
+            type: array
+            items:
+              type: string
+          gender:
+            type: array
+            items:
+              type: string
       xml:
         name: QueryExpandDegree
     UpdateStatus:
